ignore web.properties

--- a/src/main/resources/web.properties
+++ b/src/main/resources/web.properties
@@ -1,8 +1,8 @@
 #\u867e\u7c73\u767b\u5f55\u51ed\u8bc1
 xiami_user = 1352064451@qq.com
-xiami_password = 
+xiami_password = xiami520..
 #\u867e\u7c73uid
-xiami_uid = 
+xiami_uid = 11172048
 #\u867e\u7c73\u6536\u85cf\u6bcf\u9875\u663e\u793a\u6570\u91cf
 numPerPage = 25
 #\u4e34\u65f6\u6587\u4ef6\u540d
